fix: spacing

--- a/src/app.css
+++ b/src/app.css
@@ -187,7 +187,7 @@ h4 .markdownIt-Anchor {
 }
 
 .backgroundExample {
-  margin-top: 15rem;
+  clear: both;
 }
 
 .backgroundBenefits {
