--- a/src/components/illustrationList/illustrationList.module.css
+++ b/src/components/illustrationList/illustrationList.module.css
@@ -1,3 +1,7 @@
+:not(.illustrationList) + .illustrationList {
+  margin-top: 2rem;
+}
+
 .illustrationList {
   padding-block: 0.5rem;
 }
